--- a/Section-7/animatin-with-CSS-transitions/package.json
+++ b/Section-7/animatin-with-CSS-transitions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dynamic-components",
+  "name": "animations",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -7,7 +7,7 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
-    "vue": "^3.2.37"
+    "vue": "^3.3.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.1",
